# chonkur_l_raile

./: .markdownlint.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  SetupNotes.md  package.xml
chonkur/: README.md
chonkur_deploy/: CMakeLists.txt  package.xml
chonkur_deploy/chonkur_deploy/: launch_helpers.py
chonkur_deploy/chonkur_manip_deploy/launch/: chonkur_control.launch.py
chonkur_deploy/config/: chonkur_controllers.yaml  consistent_controllers.yaml  hande_controllers.yaml  ur10e_controllers.yaml
chonkur_deploy/launch/: chonkur_control.launch.py  chonkur_hw.launch.py  chonkur_tools.launch.py  control.launch.py  hande_tool_comm.launch.py  robot_state_publisher.launch.py  spawn_controllers.launch.py  ur_tools.launch.py
chonkur_deploy/launch/spawn_controllers/: hande_controllers.launch.py  ur10e_controllers.launch.py
chonkur_deploy/scripts/: chonkur_controller_stopper.py  dummy_program_state_server.py
clr_control/: CMakeLists.txt  package.xml
clr_control/clr_control/: clr_estop_safety_class.py
clr_control/scripts/: estop_safety.py
clr_deploy/: CMakeLists.txt  package.xml
clr_deploy/clr_deploy/: ctrl_config_compiler.py
clr_deploy/config/: all_controllers.yaml  clr_control_colors.yaml  clr_controllers.yaml  consistent_controllers.yaml  controllers_common.yaml  hardware_controller_configs.yaml  highlighted_controllers.yaml
clr_deploy/launch/: clr_all_hardware.launch.py  clr_control.launch.py  clr_hardware.launch.py  clr_hw.launch.py  clr_nothing_to_launch.launch.py  clr_sim.launch.py  config_compiler.launch.py  control.launch.py  monitor_ctrlrs.launch.py  realsense_cameras.launch.py  robot_state_publisher.launch.py  spawn_controllers.launch.py
clr_deploy/scripts/: ctrl_config_complier.py  monitor_controllers.py
clr_description/: CMakeLists.txt  package.xml
clr_description/launch/: view_robot.launch.py
clr_description/meshes/visual/: clr_base.dae  clr_carriage.dae  clr_link_90deg_visual.dae  lift_camera_mount.stl  right_angle_mount.dae  ur10e_plate.dae
clr_description/rviz/: view_robot.rviz
clr_description/urdf/: clr.urdf.xacro  clr_carriage.macro.xacro  clr_macro.xacro  lift_camera.macro.xacro  plates.macro.xacro  right_angle_mount.macro.xacro
clr_moveit_config/: CMakeLists.txt  package.xml
clr_moveit_config/config/: clr_moveit_controllers.yaml  clr_servo.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pick_ik_kinematics.yaml  pick_ik_kinematics_servo.yaml  pilz_cartesian_limits.yaml  sensors_3d.yaml
clr_moveit_config/launch/: clr_moveit.launch.py
clr_moveit_config/rviz/: view_robot.rviz
clr_moveit_config/scripts/: disable_collision_checking.py  enable_collision_checking.py
clr_moveit_config/srdf/: clr.srdf  clr.srdf.xacro  clr_and_mockups.srdf.xacro  clr_and_sim_mockups.srdf.xacro  clr_macro.srdf.xacro  crl.srdf  mockups_macro.srdf.xacro  sim_env_macro.srdf.xacro
clr_mujoco_config/: CMakeLists.txt  README.md  package.xml
clr_mujoco_config/description/: clr.urdf  clr.xml  ctb.xml  ctb_inputs.xml  mujoco_inputs.xml  scene.xml
clr_mujoco_config/description/assets/decomposed/bench_lid/: bench_lid.mtl
clr_mujoco_config/description/assets/decomposed/clr_base/: clr_base.mtl
clr_mujoco_config/description/assets/decomposed/ctb_handle/: ctb_handle.mtl
clr_mujoco_config/description/assets/decomposed/finger_v6/: finger_v6.mtl
clr_mujoco_config/description/assets/decomposed/grab_handle/: grab_handle.mtl
clr_mujoco_config/description/assets/decomposed/hatch_4060_frame/: hatch_4060_frame.mtl
clr_mujoco_config/description/assets/decomposed/ivr_hatch_frame_no_left/: ivr_hatch_frame_no_left.mtl
clr_mujoco_config/description/assets/decomposed/simplified_hatch_4060_face/: simplified_hatch_4060_face.mtl
clr_mujoco_config/description/assets/full/: aso_locker_cavity_only.mtl  cabinet_door_1.mtl  cabinet_door_2.mtl  cabinet_door_3.mtl  cabinet_door_4.mtl  clr_carriage.mtl  crank_handle.mtl  crank_wheel.mtl  csm_faceplate_cover.mtl  csm_latch_cover.mtl  csm_latch_housing.mtl  csm_latch_lock.mtl  csm_latch_pull.mtl  csm_outer_door.mtl  cubby_1.mtl  cubby_2.mtl  d435.mtl  drawer_1_face.mtl  drawer_2_face.mtl  express_rack_mesh.mtl  front_right_face.mtl  lift_camera_mount.mtl  lift_high_700mm.mtl  lift_low_700mm.mtl  lift_mid_700mm.mtl  mtc_effector_side.mtl  mtc_robot_side.mtl  paddle_latch_handle.mtl  paddle_latch_housing.mtl  push_latch_button.mtl  push_latch_handle.mtl  push_latch_housing.mtl  rail_des_gearbox.mtl  rail_des_live_carriage.mtl  recessed_latch_handle.mtl  recessed_latch_housing.mtl  right_angle_mount.mtl  robotiq_hande_cb_adapter.mtl  round_latch_handle.mtl  round_latch_housing.mtl  (+4 more)
clr_mujoco_config/description/assets/full/aso_locker_cavity_only/: aso_locker_cavity_only.xml  material.mtl
clr_mujoco_config/description/assets/full/base/: base.xml  material.mtl
clr_mujoco_config/description/assets/full/cabinet_door_1/: cabinet_door_1.xml  material.mtl
clr_mujoco_config/description/assets/full/cabinet_door_2/: cabinet_door_2.xml  material.mtl
clr_mujoco_config/description/assets/full/cabinet_door_3/: cabinet_door_3.xml  material.mtl
clr_mujoco_config/description/assets/full/cabinet_door_4/: cabinet_door_4.xml  material.mtl
clr_mujoco_config/description/assets/full/clr_carriage/: clr_carriage.xml  material.mtl
clr_mujoco_config/description/assets/full/crank_handle/: crank_handle.xml  material.mtl
clr_mujoco_config/description/assets/full/crank_wheel/: crank_wheel.xml  material.mtl
clr_mujoco_config/description/assets/full/csm_faceplate_cover/: csm_faceplate_cover.xml  material.mtl
clr_mujoco_config/description/assets/full/csm_latch_cover/: csm_latch_cover.xml  material.mtl
clr_mujoco_config/description/assets/full/csm_latch_housing/: csm_latch_housing.xml  material.mtl
clr_mujoco_config/launch/: clr_mujoco.launch.py  generate_clr_mjcf.launch.py
clr_mujoco_config/urdf/: clr_xacro.urdf
clr_safety/: CMakeLists.txt  package.xml
clr_safety/clr_safety/: controller_stopper_base.py  estop_safety_class.py
clr_safety/test/: test_controller_stopper.py
launch/: view.launch.py
(+186 files in other folders)
