<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drt_ros2_control_tools</name>
  <version>0.0.1</version>
  <description>
    Dexterous Robotics ros2_control tool kit
  </description>

  <maintainer email="michael.e.tobia@nasa.gov">Mike Tobia</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
