<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_control</name>
  <version>0.0.1</version>
  <description>
    Control package for ChonkUR L. Rail-E
  </description>

  <maintainer email="mina.kian@nasa.gov">Mina Kian</maintainer>

  <license>NASA-1.3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>
  <exec_depend>drt_ros2_control_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
