<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_deploy</name>
  <version>0.0.1</version>
  <description>
    Deploy package for ChonkUR L. Rail-E
  </description>

  <maintainer email="emma.zemler@nasa.gov">Emma Zemler</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>clr_description</exec_depend>
  <exec_depend>chonkur_deploy</exec_depend>
  <exec_depend>vention_rail_deploy</exec_depend>
  <exec_depend>ewellix_liftkit_deploy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
