<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_description</name>
  <version>0.0.1</version>
  <description>
    URDF description for ChonkUR L. Rail-E
  </description>

  <maintainer email="michael.e.tobia@nasa.gov">Michael Tobia</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>chonkur_manip_description</exec_depend>
  <exec_depend>vention_rail_description</exec_depend>
  <exec_depend>ewellix_liftkit_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
