<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_mujoco_config</name>
  <version>1.0.0</version>
  <description>Mujoco sim resources for the CLR robot system.</description>
  <maintainer email="erik.holum@nasa.gov">Erik Holum</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>mujoco_ros2_simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
